--- a/udy/web_dev/tes3/index.html
+++ b/udy/web_dev/tes3/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="script" href="js\js1.js">
 </head>
 <body>
-    
+    <p>Hello</p>
+    <button type="submit" action="js/js1.js">msb</button>
+    <script src="js/js1.js" charset="utf-8"></script>
 </body>
 </html>
