--- a/udy/resource_sample/dom_challenge/DOM Challenge Starting Files/index.html
+++ b/udy/resource_sample/dom_challenge/DOM Challenge Starting Files/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <!--link rel="stylesheet" href="styles.css"-->
 
   </head>
   <body>
 
-    <h1>Hello</h1>
+    <h1 class="huge">Hello</h1>
 
     <input type="checkbox">
 
@@ -21,7 +21,7 @@
       <li class="list">Second</li>
       <li class="list">Third</li>
     </ul>
-
+    <script src="index.js"></script>
   </body>
 
 </html>
