--- a/ecom/html/index.html
+++ b/ecom/html/index.html
@@ -34,6 +34,7 @@
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="#">Search</a></li>
+                    <li><a href="ecom\Simon Game Challenge Starting Files\index.html">Simon</a></li>
                 </ul>
             </div>
         </div>
